complete js that gives the calculator basic functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class='calculator'>
-            <div class='display'><span id="display-content">0</span></div>
+            <div class='display'><span id="display-content"></span></div>
             <button class='digit' id="one">1</button>
             <button class='digit' id="two">2</button>
             <button class='digit' id="three">3</button>
