--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
     <main>
         <div class='calculator'>
             <div class='display'><span id="display-content"></span></div>
-            <button class='digit' id="one">1</button>
-            <button class='digit' id="two">2</button>
-            <button class='digit' id="three">3</button>
-            <button class='digit' id="four">4</button>
-            <button class='digit' id="five">5</button>
-            <button class='digit' id="six">6</button>
-            <button class='digit' id="seven">7</button>
-            <button class='digit' id="eight">8</button>
-            <button class='digit' id="nine">9</button>
-            <button class='digit' id="zero">0</button>
-            <button class="digit" id="decimal">.</button>
-            <button class='operator' id="add">+</button>
-            <button class='operator' id="subtract">-</button>
-            <button class='operator' id="multiply">x</button>
-            <button class='operator' id="divide">÷</button>
-            <button class='operator' id="equals">=</button>
-            <button id="clear">AC</button>
-            <button id="del">DEL</button>
+            <div class="buttons">
+                <button type="button" class='digit' id="one">1</button>
+                <button type="button" class='digit' id="two">2</button>
+                <button type="button" class='digit' id="three">3</button>
+                <button type="button" class='digit' id="four">4</button>
+                <button type="button" class='digit' id="five">5</button>
+                <button type="button" class='digit' id="six">6</button>
+                <button type="button" class='digit' id="seven">7</button>
+                <button type="button" class='digit' id="eight">8</button>
+                <button type="button" class='digit' id="nine">9</button>
+                <button type="button" class='digit' id="zero">0</button>
+                <button type="button" class="digit" id="decimal">.</button>
+                <button type="button" class='operator' id="add">+</button>
+                <button type="button" class='operator' id="subtract">-</button>
+                <button type="button" class='operator' id="multiply">x</button>
+                <button type="button" class='operator' id="divide">÷</button>
+                <button type="button" class='operator' id="equals">=</button>
+                <button type="button" id="clear">AC</button>
+                <button type="button" id="del">DEL</button>
+            </div>
         </div>
     </main>
 
